--- a/main.html
+++ b/main.html
@@ -7,6 +7,14 @@
 </head>
 
 <body>
+	<h1>Login Form</h1>
+	<form action="">
+		<input type="text" name="username" id="username" placeholder="Username">
+		<input type="password" name="password" id="password" placeholder="Password">
+		<input type="checkbox" name="remember_me" id="checkbox">
+		<label for="checkbox">Remember me</label>
+		<button type="submit" id="submit">Submit</button>
+	</form>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
